# PortfolioProject

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml
locales/: en.yml  ru.yml
src/bot/: bot.dockerfile
src/bot/app/: misc.py  run_bot.py
src/bot/app/bot/handlers/: __init__.py  admin.py  settings.py  start.py
src/bot/app/bot/handlers/callbackdata/: __init__.py  admin.py  settings.py  start.py
src/bot/app/bot/handlers/keyboards/: admin.py  settings.py  start.py
src/bot/app/bot/handlers/states/: admin.py
src/bot/app/bot/middlewares/: big_bro.py
src/bot/app/core/: config.py
src/bot/app/db/: init_db.py
src/bot/app/models/: users.py
src/bot/app/repo/: users.py
src/bot/app/utils/locale/: exceptions.py  locale.py  manager.py
src/web/: pyproject.toml  web.dockerfile
src/web/admin_web/admin_models/: UsersAdmin.py  __init__.py
src/web/admin_web/models/: users.py
src/web/web/: settings.py
